namespace AddressBuilding;

public enum SubjectType
{
    Republic,
    Territories,
    Regions,
    AutonomousRegion,
    AutonomousTerritories
}

public enum RoadType
{
    Alley,
    Boulevard,
    Highway,
    Lane,
    Square,
    Drive,
    Avenue,
    Byway,
    Crossing,
    Descent,
    Tract,
    CulDeSac,
    Street,
    Motorway
}

public enum BuildingType
{
    House,
    Block,
    Structure,
    Shaft
}

public enum PremiseType
{
    Apartment,
    Room,
    Office,
    Pavilion,
    Premise,
    WorkArea,
    Warehouse,
    SalesFloor,
    Workshop
}

public enum ParkingSpaceType
{
    ParkingSpace,
    Garage,
    GarageBox
}

public enum LandParcelType
{
    LandPlot,
    GardenPlot,
    AgriculturalPlot,
    ForestPlot,
    WaterPlot,
    SpeciallyProtectedPlot,
    IndustrialPlot
}

public enum AddressObjectType
{
    Building,
    LandParcel,
    ParkingSpace,
    Premise,
    Structure
}